# ChangeLog for media-sound/ecasound
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.64 2012/06/14 06:22:46 radhermit Exp $

*ecasound-2.9.0 (14 Jun 2012)

  14 Jun 2012; Tim Harder <radhermit@gentoo.org> +ecasound-2.9.0.ebuild,
  metadata.xml:
  Version bump. Add lv2 use flag and update to EAPI 4.

  14 Jun 2012; Tim Harder <radhermit@gentoo.org> ecasound-2.8.1.ebuild:
  Fix conditional sed line (bug #387819) and use prune_libtool_files.

  05 May 2012; Michał Górny <mgorny@gentoo.org> ecasound-2.8.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Jan 2012; Agostino Sarubbo <ago@gentoo.org> ecasound-2.6.0.ebuild,
  ecasound-2.8.1.ebuild:
  force libmikmod to slot 0, as ssuominen suggested

  24 Jul 2011; Raúl Porcel <armin76@gentoo.org> ecasound-2.6.0.ebuild:
  Drop sparc keyword

*ecasound-2.8.1 (28 Jun 2011)

  28 Jun 2011; Tim Harder <radhermit@gentoo.org> +ecasound-2.8.1.ebuild,
  +files/ecasound-2.8.1-ldflags.patch, metadata.xml:
  Version bump (fixes bug #313033). Add oil, osc, and static-libs USE flags,
  fix documentation install (bug #299097, thanks to Christophe LEFEBVRE), and
  improve python support (bug #313945).

  23 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  ecasound-2.6.0.ebuild:
  Delete deprecation warnings (bug #313945).

  01 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> ecasound-2.6.0.ebuild:
  Remove USE depend for media-libs/alsa-lib[midi].

  09 Jun 2009; Raúl Porcel <armin76@gentoo.org> ecasound-2.6.0.ebuild:
  sparc stable wrt #271779

  31 May 2009; Markus Meier <maekke@gentoo.org> ecasound-2.6.0.ebuild:
  amd64/x86 stable, bug #271779

  21 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -ecasound-2.5.2-r1.ebuild, ecasound-2.6.0.ebuild:
  Remove arts support which was deprecated by ecasound upstream in next
  release too.

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> -ecasound-2.4.3.ebuild,